lab1/Test/L1-A-10-80.output
Error Type A at Line 14
Error Type A at Line 19
Error Type B at Line 24
Error Type A at Line 25
Error Type A at Line 37
