lab1/Test/L1-A-10-80.cmm
int ;
float j2Q1RGkhA3GPs_k [ 792323749 ] 
;
int ;
int kc0JtpmA6 , TnVjTO17B 

;
int z_x ( struct {
  int hegT38Qf22qPRjJxSx8 ;
  struct {
  }I88i3yF7SnS ;
  int acR1aT ;
}mnmxqaUGVns ) {
%  struct vYD0VOC3EAQfvzGiR {
  }lC , ZuI0O052 ;
{
    struct gBhqmbSXEo mEHOpny1LzNjVCZgu7st = Fm9i9lC59Mh 
      ;
    if ~( WWuZfOGFd ) {
    }
    while ( LPzIp_2CnCEVcAs7 )     qNqTksAPvRBsdFGoQtFI 
      ;

    if ( KgOZvzfDy3cZ )     while ( DdUM0lL 222815546.2037563285 
      )     if ( ^q0Sfbcf )     if ( Rd )     MyaYPWZ ;
else     vezGJsQd2gVmY ;

else     return Fg5t ;


else     if ( Watuf3_8r6tI7UvzjM )     QVLGLYV0h94W 
      || vCxsttjbs_xV != u8GAtwHjGNWK59KkiN + iaNVcjTJ / 
      ! - ( DKcgsi = RnYKUv && v6F0S8 > JTSHq2xd_rO19f - 
      K * c_9Z6U022WJM [ cPgy57cN8poKmFCw2bd || A17fQkWgMXdMpqf1 
      == U ( vP_FEWxGy5aRxm <= eRUuQ * ! QYoJel ( 2040063359.1660925916 
      ) >= ! Cq5x6DtQm . pRK5VTb9z_pcyuvWX8f < 2021743190 
      , ! - HU01QB ( ) . diGPfR60 ) ] ^) ;


  }}
int IqBQHczA9Ri7EYg ( int I_PijOW4b_wUuFjt , int hi9 
  ) {
}
int i ( ) {
}
int hXTZ ( ) {
}
int ;
int ;
